force-app/main/default/objects/SEBCaseContact__c/SEBCaseContact__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>SEB Case Contact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEB Case Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>