force-app/main/default/objects/SEBCaseContact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-JB110118 - Created for BREG phase 1</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SEB Case Contacts</relationshipLabel>
    <relationshipName>SEB_Case_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>