force-app/main/default/objects/SEBCaseContact__c/fields/CaseResult__c.field-meta.xml
<CustomField>
    <fullName>CaseResult__c</fullName>
    <formula>IF( TEXT(Role__c) = &quot;Respondent&quot; , 

   IF( TEXT(SEBCase__r.Status__c) = &quot;Closed&quot;, 

      CASE( TEXT(ClosingCode__c) , 

      &quot;Legal action&quot;, &quot;Legal Action Taken&quot;, 

      &quot;Warning Letter&quot;, &quot;Warning Letter Issued&quot;,



      &quot;Closed&quot;) 
   , 

   &quot;Pending&quot;)
, 

NULL)</formula>
    <label>Disposition - Public</label>
    <type>Text</type>
</CustomField>