force-app/main/default/objects/SEBCaseContact__c/fields/ClosingCode__c.field-meta.xml
<CustomField>
    <fullName>ClosingCode__c</fullName>
    <description>PacPoint-JB110118 - Created for BREG phase 1</description>
    <label>Closing Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Error</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Plan</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Complainant/Witness Deceased</fullName>
            </value>
            <value>
                <fullName>Complainant Uncooperative/Unavailable</fullName>
            </value>
            <value>
                <fullName>Complaint Withdrawn</fullName>
            </value>
            <value>
                <fullName>Conversion Disposition</fullName>
            </value>
            <value>
                <fullName>Entity Insolvent</fullName>
            </value>
            <value>
                <fullName>Foreign Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Insufficient Evidence</fullName>
            </value>
            <value>
                <fullName>Legal action</fullName>
            </value>
            <value>
                <fullName>No action</fullName>
            </value>
            <value>
                <fullName>No Jurisdiction</fullName>
            </value>
            <value>
                <fullName>No Longer in Business</fullName>
            </value>
            <value>
                <fullName>No Violation</fullName>
            </value>
            <value>
                <fullName>Prior Action Taken</fullName>
            </value>
            <value>
                <fullName>Records Only</fullName>
            </value>
            <value>
                <fullName>Referral/Action Taken-Other Agency</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Respondent Deceased</fullName>
            </value>
            <value>
                <fullName>Respondent Unlocatable</fullName>
            </value>
            <value>
                <fullName>See Connecting Case</fullName>
            </value>
            <value>
                <fullName>Warning Letter</fullName>
            </value>
            <value>
                <fullName>Witness Uncooperative/Unavailable</fullName>
            </value>
            <value>
                <fullName>Bankruptcy/Entity Involvent</fullName>
                <isActive>false</isActive>
                <label>Bankruptcy/Entity Involvent</label>
            </value>
            <value>
                <fullName>Respondent Added to Case</fullName>
                <isActive>false</isActive>
                <label>Respondent Added to Case</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>