force-app/main/default/objects/SEBCaseContact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Witnesses</relationshipName>
    <type>Lookup</type>
</CustomField>