force-app/main/default/objects/SEBCaseContact__c/fields/CRD__c.field-meta.xml
<CustomField>
    <fullName>CRD__c</fullName>
    <formula>Contact__r.CRD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRD#</label>
    <type>Text</type>
</CustomField>