force-app/main/default/objects/SEBCaseContact__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PacPoint - RA010719 - BREG Phase 1</description>
    <inlineHelpText>Describe the role of this SEB Case Contact as needed.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>