force-app/main/default/objects/SEBCaseContact__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <description>Placeholder for Files Being Uploaded to Docusign</description>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>