force-app/main/default/objects/SEBCaseContact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>