force-app/main/default/objects/SEBCaseContact__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>