force-app/main/default/objects/SEBCaseContact__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>