force-app/main/default/objects/SEBCaseContact__c/fields/MonthsofIncarceration__c.field-meta.xml
<CustomField>
    <fullName>MonthsofIncarceration__c</fullName>
    <label>Months of Incarceration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>