force-app/main/default/objects/SEBCaseContact__c/fields/MonthsofProbation__c.field-meta.xml
<CustomField>
    <fullName>MonthsofProbation__c</fullName>
    <label>Months of Probation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>