force-app/main/default/objects/SEBCaseContact__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>