force-app/main/default/objects/SEBCaseContact__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint JF 1/26/26: Created to indicate when a legal document is set to public for a SEB Case Contact</description>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>