force-app/main/default/objects/SEBCaseContact__c/fields/RelatedSEBCaseContact__c.field-meta.xml
<CustomField>
    <fullName>RelatedSEBCaseContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is intended to create a relationship between two SEB Case Contact records. For example, if you are creating an respondent attorney SEB Case Contact and you would like to relate them to an existing respondent, look up the respondent name here.</inlineHelpText>
    <label>Related SEB Case Contact</label>
    <referenceTo>SEBCaseContact__c</referenceTo>
    <relationshipLabel>Related SEB Case Contacts</relationshipLabel>
    <relationshipName>SEB_Case_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>