force-app/main/default/objects/SEBCaseContact__c/fields/RespondentCountry__c.field-meta.xml
<CustomField>
    <fullName>RespondentCountry__c</fullName>
    <defaultValue>&quot;United States&quot;</defaultValue>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Respondent Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>