force-app/main/default/objects/SEBCaseContact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>PacPoint-IC102318 - Created for BREG phase 1</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>Complainant Attorney</fullName>
            </value>
            <value>
                <fullName>Complainant - Other</fullName>
            </value>
            <value>
                <fullName>Respondent</fullName>
            </value>
            <value>
                <fullName>Respondent Attorney</fullName>
            </value>
            <value>
                <fullName>Respondent - Other</fullName>
            </value>
            <value>
                <fullName>Secondary Complainant</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Witness - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>