force-app/main/default/objects/SEBCaseContact__c/fields/SEBCase__c.field-meta.xml
<CustomField>
    <fullName>SEBCase__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>SEB Case</label>
    <referenceTo>SEBCase__c</referenceTo>
    <relationshipName>Witnesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>