force-app/main/default/objects/SEBCaseContact__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>&quot;HI&quot;</defaultValue>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>