force-app/main/default/objects/SEBCaseContact__c/fields/StateNonUS__c.field-meta.xml
<CustomField>
    <fullName>StateNonUS__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>State (Non-US)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>