force-app/main/default/objects/SEBCaseContact__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>