force-app/main/default/objects/SEBCaseContact__c/fields/Total_of_Allegations__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Allegations__c</fullName>
    <description>Counts the total related allegation records.</description>
    <label>Total # of Allegations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>