force-app/main/default/objects/SEBCaseContact__c/fields/Total_of_Legal_Actions__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Legal_Actions__c</fullName>
    <description>Counts the total related Legal Action records on the Case Contact.</description>
    <label>Total # of Legal Actions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>