force-app/main/default/objects/SEBCaseContact__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Zip</label>
    <length>30</length>
    <type>Text</type>
</CustomField>